#include "service_master.h"

namespace ms2gw
{
  
    void Ms2gwServiceImpl::StartLogicServer(::google::protobuf::RpcController* controller,
        const ::ms2gw::StartLogicServerRequest* request, 
        ::google::protobuf::Empty* response,
        ::google::protobuf::Closure* done)
    {

    }

}


